Added google sign in button.

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -25,6 +25,11 @@
               <button ion-button color="primary">Sign In</button>
             </ion-col>
           </ion-row>
+          <ion-row>
+            <ion-col text-center>
+              <button class="google" ion-button color="primary"><span>Sign in with Google</span></button>
+            </ion-col>
+          </ion-row>
         </ion-grid>
 
       </ion-card-content>
