Added header. Changed name of app in config. Added login page functions.

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,5 +1,12 @@
 <ion-content padding>
   <div class="container">
+    <ion-grid>
+      <ion-row>
+        <ion-col text-center>
+          <img class="logo-header" src="assets/imgs/logo-header.png">
+        </ion-col>
+      </ion-row>
+    </ion-grid>
     <ion-card class="item">
       <ion-card-header>
         Login
@@ -8,12 +15,12 @@
 
         <ion-item>
           <ion-label>Username</ion-label>
-          <ion-input type="text"></ion-input>
+          <ion-input type="text" [(ngModel)]="username" (keyup.enter)="Login()"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label>Password</ion-label>
-          <ion-input type="password"></ion-input>
+          <ion-input type="password" [(ngModel)]="password" (keyup.enter)="Login()"></ion-input>
         </ion-item>
 
         <ion-grid>
@@ -22,19 +29,17 @@
               <button ion-button color="light">Register</button>
             </ion-col>
             <ion-col text-center>
-              <button ion-button color="primary">Sign In</button>
+              <button ion-button color="primary" (click)="Login()">Sign In</button>
             </ion-col>
           </ion-row>
           <ion-row>
             <ion-col text-center>
-              <button class="google" ion-button color="primary"><span>Sign in with Google</span></button>
+              <button class="google" ion-button color="primary" (click)="GoogleLogin()"><span>Sign in with Google</span></button>
             </ion-col>
           </ion-row>
         </ion-grid>
 
       </ion-card-content>
-
     </ion-card>
-
   </div>
 </ion-content>
