Removed leftover code. Added imgur component.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,5 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to irl rpg!</h2>
-  <p>You are level {{level}}</p>
-  <p>XP: {{xp}}</p>
+  <h2>Welcome to imgur!</h2>
 </ion-content>
