Removed logo from login page. Added rudimentary testing support to login page.

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -3,7 +3,7 @@
     <ion-grid>
       <ion-row>
         <ion-col text-center>
-          <img class="logo-header" src="assets/imgs/logo-header.png">
+          <img class="logo-header" src="">
         </ion-col>
       </ion-row>
     </ion-grid>
